@@ -1,2 +1,2 @@
 cd ./bin
-java -Djava.ext.dirs="../libs" RSSController
+java -classpath="../libs" RSSController
